opening fetch ticket endpoint