@@ -4,7 +4,6 @@ import static java.net.HttpURLConnection.HTTP_GONE;
 import static java.net.HttpURLConnection.HTTP_NOT_FOUND;
 import static java.net.HttpURLConnection.HTTP_OK;
 import static no.unit.nva.publication.ticket.TicketDtoParser.toTicket;
-import static no.unit.nva.testutils.RandomDataGenerator.randomElement;
 import static no.unit.nva.testutils.RandomDataGenerator.randomString;
 import static no.unit.nva.testutils.RandomDataGenerator.randomUri;
 import static nva.commons.apigateway.AccessRight.MANAGE_DOI;
@@ -17,8 +16,6 @@ import static org.hamcrest.core.IsEqual.equalTo;
 import static org.hamcrest.core.IsNot.not;
 import java.io.IOException;
 import java.net.URI;
-import java.util.Arrays;
-import java.util.HashSet;
 import java.util.Map;
 import no.unit.nva.commons.json.JsonUtils;
 import no.unit.nva.model.Publication;
@@ -132,7 +129,7 @@ class GetTicketHandlerTest extends TicketTestLocal {
         var response = GatewayResponse.fromOutputStream(output, TicketDto.class);
         var ticketDto = response.getBodyObject(TicketDto.class);
 
-        assertThat(ticketDto.getMessages().get(0).getText(),  is(nullValue()));
+        assertThat(ticketDto.getMessages().getFirst().getText(),  is(nullValue()));
     }
 
     @ParameterizedTest
@@ -152,19 +149,6 @@ class GetTicketHandlerTest extends TicketTestLocal {
     }
 
     @ParameterizedTest
-    @DisplayName("should  return not found when user is not the owner of the associated publication")
-    @MethodSource("no.unit.nva.publication.ticket.test.TicketTestUtils#ticketTypeAndPublicationStatusProvider")
-    void shouldReturnNotFoundWhenUserIsNotTheOwnerOfTheAssociatedPublication(
-        Class<? extends TicketEntry> ticketType, PublicationStatus status) throws ApiGatewayException, IOException {
-        var publication = TicketTestUtils.createPersistedPublication(status, resourceService);
-        var ticket = TicketTestUtils.createPersistedTicket(publication, ticketType, ticketService);
-        var request = createHttpRequest(publication, ticket, randomOwner()).build();
-        handler.handleRequest(request, output, CONTEXT);
-        var response = GatewayResponse.fromOutputStream(output, Problem.class);
-        assertThat(response.getStatusCode(), is(equalTo(HTTP_NOT_FOUND)));
-    }
-
-    @ParameterizedTest
     @DisplayName("should return ticket when curator is requester")
     @MethodSource("no.unit.nva.publication.ticket.test.TicketTestUtils#ticketTypeAndPublicationStatusProvider")
     void shouldReturnTicketWhenCuratorIsRequester(Class<? extends TicketEntry> ticketType, PublicationStatus status)
@@ -178,37 +162,6 @@ class GetTicketHandlerTest extends TicketTestLocal {
         var ticketDto = response.getBodyObject(TicketDto.class);
         var actualTicketEntry = toTicket(ticketDto);
         assertThat(TicketDto.fromTicket(actualTicketEntry), is(equalTo(ticketDto)));
-    }
-
-    @ParameterizedTest
-    @DisplayName("should return Not Found when requester is curator of wrong institution")
-    @MethodSource("no.unit.nva.publication.ticket.test.TicketTestUtils#ticketTypeAndPublicationStatusProvider")
-    void shouldReturnTicketWhenRequesterIsCuratorOfWrongInstitution(Class<? extends TicketEntry> ticketType,
-                                                                    PublicationStatus status)
-        throws ApiGatewayException, IOException {
-        var publication = TicketTestUtils.createPersistedPublication(status, resourceService);
-        var ticket = TicketTestUtils.createPersistedTicket(publication, ticketType, ticketService);
-        var request = createHttpRequestForElevatedUser(ticket, randomUri(), MANAGE_DOI).build();
-        handler.handleRequest(request, output, CONTEXT);
-        var response = GatewayResponse.fromOutputStream(output, Problem.class);
-        assertThat(response.getStatusCode(), is(equalTo(HTTP_NOT_FOUND)));
-    }
-
-    @ParameterizedTest
-    @DisplayName("should return Not Found when requester is the wrong type of elevated user")
-    @MethodSource("no.unit.nva.publication.ticket.test.TicketTestUtils#ticketTypeAndPublicationStatusProvider")
-    void shouldReturnNotFoundWhenRequestIsTheWrongTypeOfElevatedUser(Class<? extends TicketEntry> ticketType,
-                                                                     PublicationStatus status)
-        throws ApiGatewayException, IOException {
-        var publication = TicketTestUtils.createPersistedPublication(status, resourceService);
-        var ticket = TicketTestUtils.createPersistedTicket(publication, ticketType, ticketService);
-        var wrongAccessRights = new HashSet<>(Arrays.asList(AccessRight.values()));
-        wrongAccessRights.remove(MANAGE_DOI);
-        var request =
-            createHttpRequestForElevatedUser(ticket, ticket.getCustomerId(), randomElement(wrongAccessRights)).build();
-        handler.handleRequest(request, output, CONTEXT);
-        var response = GatewayResponse.fromOutputStream(output, Problem.class);
-        assertThat(response.getStatusCode(), is(equalTo(HTTP_NOT_FOUND)));
     }
 
     @ParameterizedTest
@@ -312,7 +265,9 @@ class GetTicketHandlerTest extends TicketTestLocal {
                                                                User owner) {
         return new HandlerRequestBuilder<TicketDto>(JsonUtils.dtoObjectMapper)
                    .withCurrentCustomer(ticket.getCustomerId())
-                   .withNvaUsername(owner.toString())
+                   .withUserName(owner.toString())
+                   .withTopLevelCristinOrgId(randomUri())
+                   .withPersonCristinId(randomUri())
                    .withPathParameters(createPathParameters(publication, ticket));
     }
 }
